# sudonim

./: LICENSE  README.md  pyproject.toml  sudonim
sudonim/: __init__.py  __main__.py  args.py  env.py  update.py
sudonim/backends/: __init__.py  llama_cpp.py  mlc.py  quantization.py
sudonim/bench/: __main__.py  api_endpoint.py  dataset.py  request_processor.py
sudonim/clients/: llm.py  vlm-simple.py  vlm.py
sudonim/runners/: __init__.py  benchmark.py  command.py  download.py  export.py  server.py  upload.py
sudonim/runtimes/: __init__.py  llama_cpp.py  mlc.py  quantization.py
sudonim/utils/: cuda.py  docker.py  hub.py  log.py  misc.py  shell.py  table.py
